--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           "medicalSpecialty": "Obstetrics and Gynecology",
           "address": {
             "@type": "PostalAddress",
-            "streetAddress": "956 Price Road",
+            "streetAddress": "95 E Price Rd",
             "addressLocality": "Brownsville",
             "addressRegion": "TX",
             "postalCode": "78521",
@@ -67,7 +67,7 @@
           "medicalSpecialty": "Obstetrics and Gynecology",
           "address": {
             "@type": "PostalAddress",
-            "streetAddress": "3308 Southmost Road",
+            "streetAddress": "3855 Southmost Rd",
             "addressLocality": "Brownsville",
             "addressRegion": "TX",
             "postalCode": "78521",
