--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
     <div class="cta">
         <p><strong>Ready to take the next step?</strong></p>
-        <p><a href="https://www.clinicasantamaria.us" target="_blank">Visit our official website to schedule your appointment</a></p>
+        <p><a href="https://www.clinicasantamaria.us/why-choose-us" target="_blank">Visit our official website to schedule your appointment</a></p>
     </div>
 
     <p>Need directions? <a href="https://www.google.com/maps?cid=9673572659300532584" target="_blank">Find our Price Rd location on Google Maps</a></p>
