--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Clinica Santa Maria - Women's Health Care in Brownsville, TX</title>
+<title>Women's Health Guide – Brownsville, TX</title>
 <meta content="Comprehensive women's health care in Brownsville, TX. OB-GYN exams, Pap smears, contraceptive counseling, bilingual care. Two convenient locations." name="description"/>
 <meta content="OB-GYN Brownsville, women's health Brownsville TX, Pap smear, contraceptive counseling, bilingual healthcare" name="keywords"/>
 <!-- Google Fonts -->
@@ -510,31 +510,7 @@
             }
         }
 
-        /* Floating Action Button */
-        .fab {
-            position: fixed;
-            bottom: 30px;
-            right: 30px;
-            background: linear-gradient(45deg, #cdf3ff, #f9f5dd);
-            color: #333;
-            width: 60px;
-            height: 60px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 1.5rem;
-            text-decoration: none;
-            box-shadow: 0 4px 20px rgba(205, 243, 255, 0.4);
-            transition: all 0.3s ease;
-            z-index: 1000;
-        }
 
-        .fab:hover {
-            transform: translateY(-5px) scale(1.1);
-            background: #ffffff;
-            box-shadow: 0 8px 30px rgba(255, 255, 255, 0.5);
-        }
     </style>
 <link href="https://southtxrelay.github.io/clinica-santa-maria/" rel="canonical"/></head>
 <body>
@@ -542,16 +518,12 @@
 <header>
 <div class="container">
 <div class="header-content">
-<div class="logo">
-<h1>Clinica Santa Maria</h1>
-</div>
-<div class="header-contact">
-<div class="bilingual-badge">Bilingual Care</div>
-<a class="phone-number" href="https://www.clinicasantamaria.us/clinica-santa-maria">
-<i class="fas fa-calendar-check"></i>
-                        Schedule Appointment
-                    </a>
-</div>
+        <div class="logo">
+            <h1><strong>Clinica Santa Maria</strong></h1>
+        </div>
+        <div class="header-contact">
+            <div class="bilingual-badge">Bilingual Care</div>
+        </div>
 </div>
 </div>
 </header>
@@ -559,23 +531,19 @@
 <section class="hero">
 <div class="container">
 <div class="hero-content">
-<h1>Women's Health Care in Brownsville</h1>
+            <h1>Comprehensive Women's Health for Brownsville</h1>
 <p class="subtitle">Compassionate, Bilingual OB-GYN Services</p>
 <p class="description">
                     At Clinica Santa Maria, we're dedicated to supporting women's health in every stage of life. 
                     Your annual OB-GYN exam is a cornerstone of preventive care, and we provide comprehensive 
                     women's health services in a comfortable, welcoming environment.
                 </p>
-<div class="cta-buttons">
-<a class="btn btn-primary" href="https://www.clinicasantamaria.us/clinica-santa-maria">
-<i class="fas fa-calendar-check"></i>
-                        Schedule Your Exam
-                    </a>
-<a class="btn btn-secondary" href="#services">
-<i class="fas fa-heart"></i>
-                        Our Services
-                    </a>
-</div>
+            <div class="cta-buttons">
+                <a class="btn btn-secondary" href="#contact">
+                    <i class="fas fa-arrow-down"></i>
+                    Learn More
+                </a>
+            </div>
 </div>
 </div>
 </section>
@@ -618,37 +586,31 @@
 <i class="fas fa-stethoscope"></i>
 <h3>Pelvic &amp; Breast Exams</h3>
 <p>Comprehensive physical examinations to monitor your reproductive and overall health.</p>
-<a class="btn btn-primary" href="https://www.clinicasantamaria.us/clinica-santa-maria">Learn More</a>
 </div>
 <div class="service-card">
 <i class="fas fa-microscope"></i>
 <h3>Pap Smears &amp; HPV Testing</h3>
 <p>Essential screening tests for cervical cancer prevention and early detection.</p>
-<a class="btn btn-primary" href="https://www.clinicasantamaria.us/clinica-santa-maria">Learn More</a>
 </div>
 <div class="service-card">
 <i class="fas fa-pills"></i>
 <h3>Contraceptive Counseling</h3>
 <p>Personalized guidance on birth control options to fit your lifestyle and needs.</p>
-<a class="btn btn-primary" href="https://www.clinicasantamaria.us/clinica-santa-maria">Learn More</a>
 </div>
 <div class="service-card">
 <i class="fas fa-calendar-alt"></i>
 <h3>Menstrual Health</h3>
 <p>Expert care for menstrual irregularities and reproductive health concerns.</p>
-<a class="btn btn-primary" href="https://www.clinicasantamaria.us/clinica-santa-maria">Learn More</a>
 </div>
 <div class="service-card">
 <i class="fas fa-female"></i>
 <h3>Menopause Guidance</h3>
 <p>Support and treatment options to help you navigate this natural life transition.</p>
-<a class="btn btn-primary" href="https://www.clinicasantamaria.us/clinica-santa-maria">Learn More</a>
 </div>
 <div class="service-card">
 <i class="fas fa-baby"></i>
 <h3>Prenatal Care</h3>
 <p>Comprehensive care throughout your pregnancy journey for you and your baby.</p>
-<a class="btn btn-primary" href="https://www.clinicasantamaria.us/clinica-santa-maria">Learn More</a>
 </div>
 </div>
 </div>
@@ -693,7 +655,7 @@
 </div>
 </section>
 <!-- Appointment Section -->
-<section class="appointment">
+<section class="appointment" id="contact">
 <div class="container">
 <h2>Ready to Take the Next Step?</h2>
 <p>Schedule your annual OB-GYN exam with our caring team of professionals.</p>
@@ -736,7 +698,6 @@
 <div class="footer-content">
 <div class="footer-section">
 <h3>Contact Information</h3>
-<p><i class="fas fa-globe"></i> <a href="https://www.clinicasantamaria.us/clinica-santa-maria" style="color: #333;">Schedule Online</a></p>
 <p><i class="fas fa-map-marker-alt"></i> Two convenient locations in Brownsville, TX</p>
 <p><i class="fas fa-language"></i> Bilingual services available</p>
 </div>
@@ -750,13 +711,12 @@
 <li><a href="#">Menopause Care</a></li>
 </ul>
 </div>
-<div class="footer-section">
-<h3>Our Locations</h3>
-<ul>
-<li><a href="https://www.google.com/maps?cid=9673572659300532584">Price Rd Clinic</a></li>
-<li><a href="https://www.google.com/maps?cid=8005344288662457165">Southmost Rd Clinic</a></li>
-</ul>
-</div>
+        <div class="footer-section">
+            <h3>Our Locations</h3>
+            <ul>
+                <li>Two convenient locations in Brownsville, TX</li>
+            </ul>
+        </div>
 <div class="footer-section">
 <h3>Why Choose Us</h3>
 <p><strong>Compassionate Care:</strong><br/>We listen, educate, and support you</p>
@@ -769,10 +729,7 @@
 </div>
 </div>
 </footer>
-<!-- Floating Action Button -->
-<a class="fab" href="https://www.clinicasantamaria.us/clinica-santa-maria" title="Schedule Appointment">
-<i class="fas fa-calendar-check"></i>
-</a>
+
 <script type="application/ld+json">{
   "@context": "https://schema.org",
   "@type": "LocalBusiness",
