--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Women's Health Guide – Brownsville, TX</title>
-<meta content="Comprehensive women's health care in Brownsville, TX. OB-GYN exams, Pap smears, contraceptive counseling, bilingual care. Two convenient locations." name="description"/>
-<meta content="OB-GYN Brownsville, women's health Brownsville TX, Pap smear, contraceptive counseling, bilingual healthcare" name="keywords"/>
+<title>Schedule OB-GYN & Women’s Health Care – Brownsville, TX</title>
+<meta name="description" content="Bilingual women’s health and OB-GYN care in Brownsville, TX. Schedule annual exams, Pap smears, and contraceptive consults at two local clinics."/>
+<meta name="keywords" content="women's health Brownsville, OB-GYN exam, Pap smear clinic, birth control consultation, bilingual care Brownsville"/>
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;family=Poppins:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <!-- Font Awesome -->
