--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Schedule OB-GYN & Women’s Health Care – Brownsville, TX</title>
-<meta name="description" content="Bilingual women’s health and OB-GYN care in Brownsville, TX. Schedule annual exams, Pap smears, and contraceptive consults at two local clinics."/>
-<meta name="keywords" content="women's health Brownsville, OB-GYN exam, Pap smear clinic, birth control consultation, bilingual care Brownsville"/>
+<title>Comprehensive OB-GYN & Women’s Care – Brownsville, TX</title>
+<meta name="description" content="Explore OB-GYN and women’s health services at Clinica Santa Maria in Brownsville, TX. Compassionate bilingual care available at both convenient locations." />
+<meta name="keywords" content="women's health Brownsville, OB-GYN Brownsville, bilingual OB-GYN care, Pap smear Brownsville, contraceptive consultation" />
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&amp;family=Poppins:wght@400;500;600;700&amp;display=swap" rel="stylesheet"/>
 <!-- Font Awesome -->
@@ -767,5 +767,15 @@
       }
     }
   ]
-}</script></body>
-</html> 
+}</script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "@id": "obgyn-care-brownsville",
+  "name": "Comprehensive OB-GYN & Women’s Care – Brownsville, TX",
+  "description": "Compassionate, bilingual OB-GYN and women’s health care services available at Clinica Santa Maria in Brownsville."
+}
+</script>
+</body>
+</html>
